--- a/step-7-rich-media/index.html
+++ b/step-7-rich-media/index.html
@@ -4,21 +4,24 @@
   <meta charset="UTF-8">
   <title>Step 7 – Rich Media</title>
   <style>
-    .hero {
-      background: url('https://picsum.photos/800/300') center/cover no-repeat;
-      height: 300px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-size: 2rem;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+    canvas{
+      border: 1px solid black;
+      background-color: rgb(214, 244, 79);
     }
   </style>
 </head>
 <body>
-  <div class="hero">
-    Bienvenido a mi mundo digital
-  </div>
+
+<canvas id="miLienzo" width="200" height="200"></canvas>
+
+<script>
+  var c = document.getElementById("miLienzo");
+  var ctx = c.getContext("2d");
+  ctx.moveTo(0, 100);
+  ctx.lineTo(200, 100);
+  ctx.stroke();
+  
+</script>
+
 </body>
 </html>
